--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "build:prod": "npm run lint && npm run test && npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "dev": "ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "start:preprod": "NODE_ENV=preprod node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "type-check": "tsc --noEmit",
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build:prod"
   },
   "keywords": [
     "ai",
@@ -31,6 +39,7 @@
     "fast-check": "^3.15.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
