STEP 2.1: Prepare for hosting - Add HTTP server with single endpoint
✅ Created src/server.ts as single entry point
✅ Added POST /agent/outreach public endpoint
✅ Added GET /health endpoint for monitoring
✅ Comprehensive error handling and validation
✅ CORS support and security headers
✅ Environment configuration support
✅ Graceful shutdown handling
✅ Production-ready logging and monitoring

Server Features:
- Single entry point: src/server.ts
- Public endpoint: POST /agent/outreach
- Health check: GET /health
- Environment variables: PORT, NODE_ENV, MASUMI_NETWORK
- Request/response validation
- Structured error responses
- Performance monitoring

Testing:
- npm run build ✅
- npm start ✅
- curl -X POST http://localhost:3000/agent/outreach ✅
- All endpoints responding correctly
- Error handling validated
- Build verification updated

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A production-ready AI system that generates personalized, human-sounding outreach messages through a structured 7-step reasoning workflow",
   "main": "dist/index.js",
+  "bin": {
+    "outreach-agent": "dist/server.js"
+  },
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
@@ -12,8 +15,9 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "dev": "ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "start:preprod": "NODE_ENV=preprod node dist/index.js",
+    "start": "node dist/server.js",
+    "start:preprod": "NODE_ENV=preprod node dist/server.js",
+    "start:dev": "ts-node src/server.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
