🧹 Clean repository structure for production
✅ Removed unnecessary files and folders:
- Deleted development documentation (DEPLOYMENT*.md, HOSTING*.md, etc.)
- Removed .kiro/ specs directory
- Removed scripts/ directory and test files
- Removed coverage/ directory

✅ Cleaned and organized:
- Updated README.md with comprehensive documentation
- Simplified package.json scripts
- Enhanced .gitignore for production
- Added MIT LICENSE file

✅ Maintained essential files:
- Core source code in src/
- API documentation and guides
- Environment configuration
- Build and test configuration

✅ Repository structure:
📁 src/ - TypeScript source code
📁 dist/ - Compiled JavaScript (build output)
📄 README.md - Main documentation
📄 API_DOCUMENTATION.md - Complete API reference
📄 SERVER_GUIDE.md - Deployment guide
📄 TESTING_GUIDE.md - Testing instructions
📄 USAGE_EXAMPLES.md - Usage examples
📄 package.json - Dependencies and scripts
📄 .env.example/.env.preprod - Environment config

The repository is now clean, structured, and production-ready! 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ coverage/
 .env.test.local
 .env.production.local
 
-# Keep preprod config for reviewers
+# Keep preprod config for deployment
 !.env.preprod
 
 # IDE files
